# comfycast

./: Cargo.toml  README.md  astro.config.mjs  astro.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
src/: main.rs
src/components/: Api.vue  Player.astro  Player.tsx  VideoList.astro  VideoList.tsx
src/layouts/: Base.astro
src/pages/: docs.astro  index.astro
src/pages/stream/: [id].astro
src/pages/watch/: [id].ts
